# brick-python-sdk

./: .gitignore  README.md  pyproject.toml  sample_configuration.json  setup.py
bricksdk/: __init__.py  base_brick.py  utils.py
bricksdk/artifact_publisher/: __init__.py  publisher.py
bricksdk/brick_commands/: brick  brick.py  command_handler.py  create.py  proto.py
bricksdk/brick_commands/templates/generic/: Dockerfile  main.py  meta.json
bricksdk/brick_commands/templates/input/: main.py
bricksdk/brick_commands/tests/: test_brick_processor.py  test_command_handler.py  test_create.py  test_suite.py
bricksdk/brick_processors/: __init__.py  base_brick_processor.py  generic_brick_processor.py  input_brick_processor.py
bricksdk/configurations/: configuration.py
bricksdk/connectors/: __init__.py  base_connector.py  connector_types.py
bricksdk/connectors/grpc/: __init__.py  grpc_connector.py  grpc_input_connector.py  grpc_output_connector.py
bricksdk/observer/: events.py  publisher.py
bricksdk/proto_store/: __init__.py  base_proto_store.py
bricksdk/proto_store/protos/: 2_image_detection.proto  3_ocr.proto  detection_image_caster_5.proto  image_1.proto  image_classification_1.proto  image_classification_2.proto  image_detection_2.proto  image_detection_3.proto  ocr_4.proto  qna_7.proto  string_6.proto
bricksdk/solution_runner/: base_runner.py  simple_runner.py  utils.py
bricksdk/solution_runner/brick_runner/: __init__.py  base_brick_runner.py  brick_runner.py
samples/grpc_connector_sample/: grpc_client.py  grpc_connector.py  grpc_server.py
(+8 files in other folders)
